--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <nav class="menu">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="aboutMe.html">About Me</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
