--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>All About Me</title>
     </head>
     <body>
-        
+        <h1>About Me</h1>
+        <h2>Giovanni Ulloque</h2>
+        <p>Hi, My name is Giovanni and I'm from Colombia</p>
+        <p>Colombia It's a beautiful country, I live in Cartagena city close to the beach, I love to walk in the sand and watch the sea.</p>
+        <p></p>
+
         
     </body>
 </html>
