--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,9 +9,12 @@
     <body>
         <h1>About Me</h1>
         <h2>Giovanni Ulloque</h2>
+        <img src="https://photos.app.goo.gl/abvAcPVwAphvv4WAA" alt="Family" width="32" height="32">
+
+        
         <p>Hi, My name is Giovanni and I'm from Colombia</p>
         <p>Colombia It's a beautiful country, I live in Cartagena city close to the beach, I love to walk in the sand and watch the sea.</p>
-        <p></p>
+        <p>I'm an industrial engineer and work using Salesforce, I take this course to improve my coding skills, in my free time I like to take pictures in the old town and see the sunset.</p>
 
         
     </body>
