--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title>Index</title>
+    <link type="text/css" rel="stylesheet" href="styles/index.css" />
+  </head>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
     <nav class="menu">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutMe.html">About Me</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="wwr/site-plan-rafting.html">Site Plan</a></li>
       </ul>
     </nav>
   </body>
