--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>Index</title>
     <link type="text/css" rel="stylesheet" href="styles/index.css" />
-  </head>
+  </head> 
   <body>
-    <nav class="menu">
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutMe.html">About Me</a></li>
