--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>Travel Agency Site Plan</h1>
+    <h2>Giovanni Ulloque</h2>
+    <h2>WDD 130</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
-    <!-- change this -->
+    <p>Show the different travel packages to clients to cause an impression with the images and comments</p>
+        <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
-    <!-- change this -->
+    <p>Young adults and older that are interested to meet the world and travel</p>
+        <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="https://static.vecteezy.com/system/resources/previ…ir-travel-airliner-symbol-vector-illustration.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
