--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -31,9 +31,10 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://static.vecteezy.com/system/resources/previ…ir-travel-airliner-symbol-vector-illustration.jpg" alt="Logo image" />
+    <img src="https://lh3.googleusercontent.com/pw/AM-JKLXwyx5zZNaEJgqsnZlN_YCaG3uagPnzjOaQgH8YXGFeEgNbtHCzxXUss_XE06FTGGAQbRZ2j07oXH5tV1KKT4oSWV0r8i_5NGev3ZDaGyfVeeG4E1IVEt6R17EZYiXxOY7PZis5e5mzX4u0jfIDdq69iw=w1143-h914-no?authuser=0" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
+    
 
     <!-- ------------------------Steps 6-9------------------------------ -->
 
