--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Index</title>
-    <link type="text/css" rel="stylesheet" href="styles/index.css" />
+    <link  rel="stylesheet" href="styles/index.css" />
   </head> 
   <body>
     <nav>
