--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <title>Index</title>
-    <link  rel="stylesheet" href="styles/index.css" />
+    <link  rel="stylesheet" href="wwr/styles/index.css" />
   </head> 
   <body>
     <nav>
