--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -43,8 +43,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/f03a47-8de4ff-276fbf-fffd82-242325"
+      target="_blank">https://coolors.co/f03a47-8de4ff-276fbf-fffd82-242325</a>
 
     <table class="colors">
       <tr>
@@ -55,10 +55,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#276FBF</td>
+        <td class="secondary">#F03A47</td>
+        <td class="accent1">#8DE4FF</td>
+        <td class="accent2">#FFFD82</td>
       </tr>
     </table>
 
@@ -96,7 +96,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Travel With Us</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -104,7 +104,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Travel With Us
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -121,7 +121,7 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Travel With Us</h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
