--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -72,7 +72,7 @@
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font: Montserrat
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
