--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -56,7 +56,7 @@
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
         <td class="primary">#276FBF</td>
-        <td class="secondary">#F03A47</td>
+        <td class="secondary">#EF476F</td>
         <td class="accent1">#8DE4FF</td>
         <td class="accent2">#FFFD82</td>
       </tr>
