--- a/business.html
+++ b/business.html
@@ -7,12 +7,11 @@
     <title>business</title>
 </head>
 <body>
-    <h1>My Business</h1>
+    <h1>My Business: Salesforce Consultant</h1>
     <p>
-        I would like to start a business as Salesforce Consultant.
-    </p>
+        Salesforce is one of the most important CRM in the cloud, that's because I want to help other companies implement Salesforce    </p>
     <p>
-        As a Consultant, I can help companies improve their business process.
+        As a Consultant, I can help companies improve their business process and teach others about the best practices.
     </p>
 </body>
 </html>
