--- a/form.html
+++ b/form.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    I live in <input type="text" id="in1"> 
-    and love the <input type="text" id="in2">
-    <button id="but1">Send</button>
-    <div id="di1">Great</div>
+    <h2>Contact Us</h2>
+    <label>Full Name</label>
+    <input type="text" id="inp1"> 
+    <label>Email</label>
+    <input type="text" id="inp2">
+    <button id="butt1">Send</button>
+    <div id="div1">We are exciting to help you</div>
 </body>
 </html>
