--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Contact Us</h2>
     <label>Full Name</label>
-    <input type="text" id="inp1"> 
+    <input type="text" id="inp1"><br> 
     <label>Email</label>
     <input type="text" id="inp2">
     <button id="butt1">Send</button>
