--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
     <label>Full Name</label>
     <input type="text" id="inp1"><br> 
     <label>Email</label>
-    <input type="text" id="inp2">
+    <input type="text" id="inp2"><br> 
     <button id="butt1">Send</button>
     <div id="div1">We are exciting to help you</div>
 </body>
