--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Index</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Agency</title>
     <link  rel="stylesheet" href="wwr/styles/index.css" />
   </head> 
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="aboutMe.html">About Me</a></li>
-        <li><a href="wwr/site-plan-rafting.html">Site Plan</a></li>
-      </ul>
-    </nav>
+    <header>
+      <li><a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="wwr/images/logo.jpeg"/></a></li>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutMe.html">About Me</a></li>
+          <li><a href="wwr/site-plan-rafting.html">Site Plan</a></li>
+        </ul>
+      </nav>
+    </header>
+
   </body>
 </html>
