--- a/form.html
+++ b/form.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 <body>
     <h2>Contact Us</h2>
     <label>Full Name</label>
-    <input type="text" id="inp1"><br> 
+    <input type="text" id="inp1"><br> <br> 
     <label>Email</label>
-    <input type="text" id="inp2"><br> 
-    <button id="butt1">Send</button>
+    <input type="text" id="inp2"><br> <br> 
+    <button id="butt1">Send</button><br> <br> 
     <div id="div1">We are exciting to help you</div>
 </body>
 </html>
