--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
   </head> 
   <body>
     <header>
-      <li><a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="wwr/images/logo.jpeg"/></a></li>
+      <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="wwr/images/logo.png"/></a>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutMe.html">About Me</a></li>
-          <li><a href="wwr/site-plan-rafting.html">Site Plan</a></li>
-        </ul>
+          <a href="index.html">Home</a>
+          <a href="aboutMe.html">About Me</a>
+          <a href="#">Other</a></li>
+          <a href="wwr/site-plan-rafting.html">Site Plan</a>
       </nav>
     </header>
+    <div id="hero">
+      <div id="hero-box">
+        <img id="hero-img" src="wwr/images/travelExperience.png" alt="Travel Experience">
+      </div>
+      <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Travel Agency</h4>
+        <div class="button-box">
+          <a class="book" href="wwr/rates.html">Book Now</a>
+        </div>
+      </section>
+    </div>
 
   </body>
 </html>
