--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         </div>
       </section>
     </div>
-
+    <main class="home-grid">
+      <section class="rivers-card">
+        <img class="card-img" src="wwr/images/buenosAires.jpeg" alt="Buenos Aires">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
+        <h2>Travel</h2>
+      </section>
+      <section class="rivers-card">
+        <img class="card-img" src="wwr/images/iguazu.jpeg" alt="waterfall iguazu">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
+        <h2>Dream</h2>
+      </section>
+      <section class="rivers-card">
+        <img class="card-img" src="wwr/images/cartagena.jpeg" alt="cartagena">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
+        <h2>Reach</h2>
+      </section>
+      <img class="mountains" src="wwr/images/mountain.jpeg" alt="Dream Mountain">
+      <section class="msg">
+        <h2>More Than Just Dreams</h2>
+        <p>Live the life</p>
+        <a class="join" href="rivers.html">Join Us</a>
+      </section>
+    </main>
+    <footer>
+      
+    </footer>
   </body>
 </html>
