--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="hero">
       <div id="hero-box">
-        <img id="hero-img" src="wwr/images/travelExperience.png" alt="Travel Experience">
+        <img id="hero-img" src="wwr/images/travelExperience.jpg" alt="Travel Experience">
       </div>
       <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
@@ -45,7 +45,7 @@
         <img class="icon" src="wwr/images/icon.png" alt="icon">
         <h2>Reach</h2>
       </section>
-      <img class="mountains" src="wwr/images/mountain.jpeg" alt="Dream Mountain">
+      <img class="mountains" src="wwr/images/mountain.jpg" alt="Dream Mountain">
       <section class="msg">
         <h2>More Than Just Dreams</h2>
         <p>Live the life</p>
@@ -53,7 +53,7 @@
       </section>
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
