--- a/index.html
+++ b/index.html
@@ -49,11 +49,24 @@
       <section class="msg">
         <h2>More Than Just Dreams</h2>
         <p>Live the life</p>
-        <a class="join" href="rivers.html">Join Us</a>
+        <a class="join" href="wwr/travels.html">Join Us</a>
       </section>
     </main>
     <footer>
-
+      <h3>Travel Agency &copy; 2022 - Giovanni Ulloque</h3>
+      <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
+      <h3><a href="wwr/contactus.html"></a></h3>
+      <div>
+        <a href="https://facebook.com">
+          <img src="wwr/images/facebook.png" alt="facebook icon">
+        </a>
+        <a href="https://twitter.com">
+          <img src="wwr/images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com">
+          <img src="wwr/images/instagram.png" alt="instagram icon">
+        </a>
+      </div>
     </footer>
   </body>
 </html>
