--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
           <a href="index.html">Home</a>
           <a href="aboutMe.html">About Me</a>
-          <a href="#">Other</a></li>
+          <a href="#">Other</a>
           <a href="wwr/site-plan-rafting.html">Site Plan</a>
       </nav>
     </header>
@@ -55,7 +55,7 @@
     <footer>
       <h3>Travel Agency &copy; 2022 - Giovanni Ulloque</h3>
       <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
-      <h3><a href="wwr/contactus.html"></a></h3>
+      <h3><a href="wwr/contactus.html">Contact Us</a></h3>
       <div>
         <a href="https://facebook.com">
           <img src="wwr/images/facebook.png" alt="facebook icon">
