--- a/myWebsite.html
+++ b/myWebsite.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Travel Agency</title>
     <link  rel="stylesheet" href="wwr/styles/index.css" />
   </head> 
   <body>
     <header>
-      <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/></a>
+      <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="wwr/images/logo.png"/></a>
       <nav>
           <a href="index.html">Home</a>
           <a href="aboutMe.html">About Me</a>
@@ -23,7 +23,7 @@
       </div>
       <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Dry Oar</h4>
+        <h4>Make Memories with Travel Agency</h4>
         <div class="button-box">
           <a class="book" href="wwr/rates.html">Book Now</a>
         </div>
@@ -31,25 +31,25 @@
     </div>
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/buenosAires.jpeg" alt="river in forest">
-        <img class="icon" src="wwr/images/icon.png" alt="river icon">
+        <img class="card-img" src="wwr/images/buenosAires.jpeg" alt="Buenos Aires">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
         <h2>Travel</h2>
       </section>
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/iguazu.jpeg" alt="tent in mountains">
-        <img class="icon" src="wwr/images/icon.png" alt="fire icon">
+        <img class="card-img" src="wwr/images/iguazu.jpeg" alt="waterfall iguazu">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
         <h2>Dream</h2>
       </section>
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/cartagena.jpeg" alt="rafting boat">
-        <img class="icon" src="wwr/images/icon.png" alt="oars icon">
+        <img class="card-img" src="wwr/images/cartagena.jpeg" alt="cartagena">
+        <img class="icon" src="wwr/images/icon.png" alt="icon">
         <h2>Reach</h2>
       </section>
-      <img class="mountains" src="wwr/images/mountain.jpg" alt="Misty mountains">
+      <img class="mountains" src="wwr/images/mountain.jpg" alt="Dream Mountain">
       <section class="msg">
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class="join" href="wwr/rivers.html">Join Us</a>
+        <h2>More Than Just Dreams</h2>
+        <p>Live the life</p>
+        <a class="join" href="wwr/travels.html">Join Us</a>
       </section>
     </main>
     <footer>
