--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="hero">
       <div id="hero-box">
-        <img id="hero-img" src="wwr/images/travelExperience.jpg" alt="Travel Experience">
+        <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="Travel Experience">
       </div>
       <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
@@ -31,21 +31,21 @@
     </div>
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/buenosAires.jpeg" alt="river in forest">
-        <img class="icon" src="wwr/images/icon.png" alt="river icon">
+        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
         <h2>Travel</h2>
       </section>
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/iguazu.jpeg" alt="tent in mountains">
-        <img class="icon" src="wwr/images/icon.png" alt="fire icon">
+        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
         <h2>Dream</h2>
       </section>
       <section class="rivers-card">
-        <img class="card-img" src="wwr/images/cartagena.jpeg" alt="rafting boat">
-        <img class="icon" src="wwr/images/icon.png" alt="oars icon">
+        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
+        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
         <h2>Reach</h2>
       </section>
-      <img class="mountains" src="wwr/images/mountain.jpg" alt="Misty mountains">
+      <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
       <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
