--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
     </main>
     <footer>
-      <h3>Travel Agency &copy; 2022 - Giovanni Ulloque</h3>
+      <h3>Dry Oar &copy; 2022 - Giovanni Ulloque</h3>
       <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
       <h3><a href="wwr/contactus.html">Contact Us</a></h3>
       <div>
