--- a/CIT160/scripture.html
+++ b/CIT160/scripture.html
@@ -28,8 +28,8 @@
         </script>
     </head>
     <body>
-        <label>Enter your name: </label><br><br>                          
-        <input type="text" id="nameInputBox">    
+        <label>Enter your name: </label> <br><br>                          
+        <input type="text" id="nameInputBox"> <br><br>     
         <button type="button" onclick="applyScripture()">Send</button>
         <div id="outputDiv"></div>
     </body> 
