--- a/CIT160/greeting.html
+++ b/CIT160/greeting.html
@@ -13,13 +13,12 @@
          */
         function registerUser() {
             // This line prompts the user to type in his name.
-            let name = prompt("Please enter your name");
+            let name = prompt("Please enter your username");
             let email = prompt("Please enter your email");
 
         
             // Create a personalized greeting for the user.
-            let greeting = "Hello " + name + " We send the tickect to your email " +email;
-        
+            let greeting = "Hello " + name + " thank you for your registration. We send a mail to your email " +email;        
             // The next line causes the computer to display
             // a greeting to the user in a popup window.
             alert(greeting);
