--- a/CIT160/greeting.html
+++ b/CIT160/greeting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Applied Scripture</title>
+    <title>user registration</title>
     <script>
         /* Defining Table
          * Input: A person's name
