--- a/CIT160/greeting.html
+++ b/CIT160/greeting.html
@@ -26,7 +26,8 @@
         </script>
     </head>
     
-    <body>                                      
+    <body>
+        <h3>Click on the button</h3>                                      
         <button type="button" onclick="registerUser()">Register</button>
     </body>
 </html>
