--- a/index.html
+++ b/index.html
@@ -5,68 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link  rel="stylesheet" href="wwr/styles/index.css" />
+    <link  rel="stylesheet" href="wwr/styles/style.css" />
   </head> 
   <body>
-    <header>
-      <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/></a>
-      <nav>
-          <a href="index.html">Home</a>
-          <a href="aboutMe.html">About Me</a>
-          <a href="#">Other</a>
-          <a href="wwr/site-plan-rafting.html">Site Plan</a>
-      </nav>
-    </header>
-    <div id="hero">
-      <div id="hero-box">
-        <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="Travel Experience">
-      </div>
-      <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Dry Oar</h4>
-        <div class="button-box">
-          <a class="book" href="wwr/rates.html">Book Now</a>
+    <div id="content">
+      <header>
+        <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="aboutMe.html">About Me</a>
+            <a href="#">Other</a>
+            <a href="wwr/site-plan-rafting.html">Site Plan</a>
+        </nav>
+      </header>
+      <div id="hero">
+        <div id="hero-box">
+          <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="Travel Experience">
         </div>
-      </section>
-    </div>
-    <main class="home-grid">
-      <section class="rivers-card">
-        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
-        <h2>Travel</h2>
-      </section>
-      <section class="rivers-card">
-        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
-        <h2>Dream</h2>
-      </section>
-      <section class="rivers-card">
-        <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
-        <h2>Reach</h2>
-      </section>
-      <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
-      <section class="msg">
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class="join" href="wwr/rivers.html">Join Us</a>
-      </section>
-    </main>
-    <footer>
-      <h3>Dry Oar &copy; 2022 - Giovanni Ulloque</h3>
-      <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
-      <h3><a href="wwr/contactus.html">Contact Us</a></h3>
-      <div>
-        <a href="https://facebook.com">
-          <img src="wwr/images/facebook.png" alt="facebook icon">
-        </a>
-        <a href="https://twitter.com">
-          <img src="wwr/images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com">
-          <img src="wwr/images/instagram.png" alt="instagram icon">
-        </a>
+        <section id="hero-msg">
+          <h1 class="home-title">Have An Adventure</h1>
+          <h4>Make Memories with Dry Oar</h4>
+          <div class="button-box">
+            <a class="book" href="wwr/rates.html">Book Now</a>
+          </div>
+        </section>
       </div>
-    </footer>
+      <main class="home-grid">
+        <section class="rivers-card">
+          <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
+          <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
+          <h2>Travel</h2>
+        </section>
+        <section class="rivers-card">
+          <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
+          <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
+          <h2>Dream</h2>
+        </section>
+        <section class="rivers-card">
+          <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
+          <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
+          <h2>Reach</h2>
+        </section>
+        <div id="background"></div>
+        <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+          <h2>More Than Just The Thrill</h2>
+          <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+          <a class="join" href="wwr/rivers.html">Join Us</a>
+        </section>
+      </main>
+      <footer>
+        <h3>Dry Oar &copy; 2022 - Giovanni Ulloque</h3>
+        <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
+        <h3><a href="wwr/contactus.html">Contact Us</a></h3>
+        <div>
+          <a href="https://facebook.com" target="_blank">
+            <img src="wwr/images/facebook.png" alt="facebook icon">
+          </a>
+          <a href="https://twitter.com" target="_blank">
+            <img src="wwr/images/twitter.png" alt="twitter icon">
+          </a>
+          <a href="https://instagram.com" target="_blank">
+            <img src="wwr/images/instagram.png" alt="instagram icon">
+          </a>
+        </div>
+      </footer>
+    </div>
+    
   </body>
 </html>
