--- a/CIT160/footwear.html
+++ b/CIT160/footwear.html
@@ -5,7 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>footwear</title>
+
         <script>
+            /**
+            * ---DEFINING TABLE--
+            * Input: String Weather
+            * Processing: Check if Weather equals hot, rain, or snow and show a result based on the weather
+            * Output: Show the result for hot = 'sandals', rain = 'galoshes', snow = 'boots' and others 'shoes'
+            */
             let weather;
             let result;
 
