--- a/CIT160/mathQuiz.html
+++ b/CIT160/mathQuiz.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Template</title>
         <script>
+            /**
+            * ---DEFINING TABLE--
+            * Input: Enter yout favorite math operation + - / * with the result
+            * Processing: Check if the math operation is correct
+            * Output: Show a message with the result; Correct or Incorrect
+            */
             let variable;
             function handleOnClick(){
                 let message;
@@ -55,11 +61,11 @@
     <body>
         <h2>Let's practice math</h2>
         <h4>Write a math operation and check your result, example: <br> 4*5=20</h4>
-        <input type="number" id="number1" size="2" onchange="handleOnChange()" value="4">
+        <input type="text" id="number1" size="2" onchange="handleOnChange()" value="4">
         <input type="text" id="operator" size="1" onchange="handleOnChange()" value="*">
-        <input type="number" id="number2" size="2" onchange="handleOnChange()" value="5">
-        <label for="input">=</label>
-        <input type="number" id="result" size="3" onchange="handleOnChange()" value="20"> <br><br>
+        <input type="text" id="number2" size="2" onchange="handleOnChange()" value="5">
+        <label for="result">=</label>
+        <input type="text" id="result" size="3" onchange="handleOnChange()" value="20"> <br><br>
 
         <button type="button" onclick="handleOnClick()">check</button><br><br>
         
