--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <div id="content">
       <header>
-        <a id="logo_link" href="index.html"><img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/></a>
+        <a id="logo_link" href="index.html">
+          <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
-            <a href="#">Other</a>
             <a href="wwr/site-plan-rafting.html">Site Plan</a>
+            <a href="wwr/contactus.html">Contact Us</a>
         </nav>
       </header>
       <div id="hero">
@@ -34,17 +36,17 @@
         <section class="rivers-card">
           <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest">
           <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon">
-          <h2>Travel</h2>
+          <h2>Rivers</h2>
         </section>
-        <section class="rivers-card">
+        <section class="camping-card">
           <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/camping.jpg" alt="tent in mountains">
           <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/fire_icon.png" alt="fire icon">
-          <h2>Dream</h2>
+          <h2>Camping</h2>
         </section>
-        <section class="rivers-card">
+        <section class="rapids-card">
           <img class="card-img" src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat">
           <img class="icon" src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon">
-          <h2>Reach</h2>
+          <h2>Rapids</h2>
         </section>
         <div id="background"></div>
         <img class="mountains" src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains">
