--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -96,7 +96,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Travel With Us</a>
+      <a href="#">Blog</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
@@ -121,7 +121,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>Travel With Us</h3>
+    <h3>Blog</h3>
+    <img src="/wwr/images/Blog-wireframe.jpg" alt="blog page wireframe" />
+
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
