--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -104,7 +104,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        Travel With Us
+        Blog
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
