--- a/travel/site-plan.html
+++ b/travel/site-plan.html
@@ -24,7 +24,7 @@
 
 
       <h3>Audience</h3>
-      <p>Young adults and older that are interested to meet the world and travel</p>
+      <p>We bring the opportunity to create new relationships between people who love travel and enjoy sharing their experiences with those Young adults and older that are interested in meeting the world and travel</p>
 
       <hr>
       <h2>Branding</h2>
@@ -124,14 +124,42 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The Travel Agency of your dreams<br>
+
+        Fly the world and share your experiences <br>
+
+        Frequent destinations <br>
+        - Buenos Aires, Argentina <br>
+        - Cartagena, Colombia <br>
+        - Iguazu, Argentina <br>
+      </p>
+      <p>Sarah</p>
+      <p>
+        What a wonderful city, full of life and diversity, I enjoy the people, they are so kind and the food is delicious. I recommend staying in the Tritone Hotel, Is close to everything and is not expensive. I made a list of my favorite places, wish you the best.
+      </p>
+      <p>
+        Miguel
+      </p>
+      <p>
+          There is magic in this city, the people have a lot of energy and happiness, the old town is fantastic and romantic, I recommend visiting for your honeymoon, it's amazing, I also visit some islands close to the city. The water is transparent and you can snorkel.
+
+      </p>
+      <p>
+        Luisa
+
+      </p>
+
+
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/travelExperience.jpg" alt="TravelExperience">
+        <img src="images/buenosAires.jpeg" alt="Buenos Aires">
+        <img src="images/cartagena.jpeg" alt="Cartagena">
+        <img src="images/iguazu.jpeg" alt="Iguazu">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Travel With Us</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -140,7 +168,7 @@
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
