--- a/travel/site-plan.html
+++ b/travel/site-plan.html
@@ -145,7 +145,8 @@
 
       </p>
       <p>
-        Luisa
+        Luisa <br>
+        One of the best places that I`ve visited in Iguazu was the waterfalls. I went with my family and my boyfriend. I enjoyed the landscape, animals, plants, etc. Everything was amazing. Of course, we walked a lot. The natural reserve is full of stairs and wonderful roads. We also saw some animals such as monkeys and meerkats. I hope that you can visit it, you will enjoy the trip.
 
       </p>
 
@@ -161,20 +162,26 @@
       </ul>
       <h3>Travel With Us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Pick your destination <br>
+        Decide the duration of your trip <br>
+        Book flights, train, or bus tickets, and accommodation <br>
+        Plan the day-wise activities and course of action <br>
+        Pack diligently and make all the necessary adjustments <br>
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/traveling.webp" alt="image for page">
+        <img src="images/map.jpg" alt="image for page">
+        <img src="images/travelUs.png" alt="image for page">
+
 
       </ul>
       <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Share your experiences with us and get travels discounts <br>
+        
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Experience.jpg" alt="image for page3">
 
       </ul>
       <hr>
