--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="aboutMe.html">About Me</a>
+            <a href="wwr/rivers.html">Rivers</a>
             <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="wwr/contactus.html">Contact Us</a>
         </nav>
