--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -30,7 +30,7 @@
       </div>
     <div id="rivers-sub-hero">
         <h2 class="rivers-subtitle">
-
+            Make sure to reserve your date now, we have limited runs on each river and they go fast. If you have only certain dates that you can get away you should book now.
         </h2>
     </div>
       <main class="rivers-grid">
@@ -38,7 +38,7 @@
           <img class="rivers-card-img-1" src="wwr/images/rafting21_600.png" alt="river in forest">
           <div class="rivers-backgroud-1">
             <p class="rivers-p">
-
+                What an incredible season we have had. We celebrated our 50th year of running trips down the Grand Canyon. This year we ran 36 trips down the Grand Canyon introducing over 800 people to one of our favorite places on earth. We trained 4 new guides and welcomed them to our family. 
             </p>
            </div>
         </section>
@@ -46,14 +46,14 @@
             <img class="rivers-card-img-2" src="wwr/images/rafting17_600.jpg" alt="river in forest">
             <div class="rivers-backgroud-2">
               <p class="rivers-p">
-                  
+                The season started off with some chilly weather in the early season, but our guests braved the cold and loved every minute of their trip. Later the temperatures soared reaching highs of 120 F in the Grand canyon and 95 on the Salmon. We didn't have any trouble getting people in the water at those temperatures.
               </p>
              </div>
           </section>
         <section class="rivers-msg">
             <div class="rivers-backgroud-3">
                 <p class="rivers-p">
-    
+                    Our trips are all run in some of the most remote areas of the United States. We share these areas with lots of critters both large and small. Here are some tips on what to do if you should find yourself face to face with one.
                 </p>
                </div>
         </section>
