--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rivers</title>
-    <link  rel="stylesheet" href="wwr/styles/style.css" />
+    <link  rel="stylesheet" href="styles/style.css" />
   </head> 
   <body>
     <div id="content">
@@ -14,15 +14,15 @@
           <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="wwr/rivers.html">Rivers</a>
-            <a href="wwr/site-plan-rafting.html">Site Plan</a>
-            <a href="wwr/contactus.html">Contact Us</a>
+            <a href="giovanniyunior.github.io">Home</a>
+            <a href="rivers.html">Rivers</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
       </header>
       <div id="rivers-hero">
         <div id="rivers-hero-box">
-          <img id="rivers-hero-img" src="wwr/images/rafting39_1024.jpg" alt="Travel Experience">
+          <img id="rivers-hero-img" src="images/rafting39_1024.jpg" alt="Travel Experience">
         </div>
         <section id="rivers-hero-msg">
           <h1 class="rivers-title">Our Adventures</h1>
@@ -35,7 +35,7 @@
     </div>
       <main class="rivers-grid">
         <section class="rivers-card-1">
-          <img class="rivers-card-img-1" src="wwr/images/rafting21_600.png" alt="river in forest">
+          <img class="rivers-card-img-1" src="images/rafting21_600.png" alt="river in forest">
           <div class="rivers-backgroud-1">
             <p class="rivers-p">
                 What an incredible season we have had. We celebrated our 50th year of running trips down the Grand Canyon. This year we ran 36 trips down the Grand Canyon introducing over 800 people to one of our favorite places on earth. We trained 4 new guides and welcomed them to our family. 
@@ -43,7 +43,7 @@
            </div>
         </section>
         <section class="rivers-card-2">
-            <img class="rivers-card-img-2" src="wwr/images/rafting17_600.jpg" alt="river in forest">
+            <img class="rivers-card-img-2" src="images/rafting17_600.jpg" alt="river in forest">
             <div class="rivers-backgroud-2">
               <p class="rivers-p">
                 The season started off with some chilly weather in the early season, but our guests braved the cold and loved every minute of their trip. Later the temperatures soared reaching highs of 120 F in the Grand canyon and 95 on the Salmon. We didn't have any trouble getting people in the water at those temperatures.
@@ -60,20 +60,20 @@
       </main>
       <footer>
         <div class="rivers-footer">
-            <img class="rivers-card-img-3" src="wwr/images/littlecolorado-wide.jpg" alt="river in forest">
+            <img class="rivers-card-img-3" src="images/littlecolorado-wide.jpg" alt="river in forest">
         </div>
         <h3>Dry Oar &copy; 2022 - Giovanni Ulloque</h3>
-        <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
-        <h3><a href="wwr/contactus.html">Contact Us</a></h3>
+        <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+        <h3><a href="contactus.html">Contact Us</a></h3>
         <div>
           <a href="https://facebook.com" target="_blank">
-            <img src="wwr/images/facebook.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
           </a>
           <a href="https://twitter.com" target="_blank">
-            <img src="wwr/images/twitter.png" alt="twitter icon">
+            <img src="images/twitter.png" alt="twitter icon">
           </a>
           <a href="https://instagram.com" target="_blank">
-            <img src="wwr/images/instagram.png" alt="instagram icon">
+            <img src="images/instagram.png" alt="instagram icon">
           </a>
         </div>
       </footer>
