--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -14,7 +14,7 @@
           <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
         </a>
         <nav>
-            <a href="giovanniyunior.github.io">Home</a>
+            <a href="https://giovanniyunior.github.io/">Home</a>
             <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
