--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -10,7 +10,7 @@
   <body>
     <div id="content">
       <header>
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" href="https://giovanniyunior.github.io/">
           <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
         </a>
         <nav>
