--- a/travel/site-plan.html
+++ b/travel/site-plan.html
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="/travel/images/logo.png" alt="Logo image">
+      <img src="images/logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -162,6 +162,11 @@
       </ul>
       <h3>Travel With Us</h3>
       <p>
+        It is an adventure you’ve always dreamt of, but haven’t been able to plan and execute properly. Here are some useful pointers on how to plan a trip, that puts an end to the cluttered chaos by streamlining your vacations to perfect harmony and pure bliss. <br>
+
+        Vacations often start off as a wonderful idea and then eventually end up being a nightmare to manage. Often overlooked, a lot of thought and brainstorming goes into perfectly organizing touring plans. The lack of know-how on how to plan a trip is often reflected during “unseen hurdles” on a vacation. <br>
+        
+        With a little bit of preparation and effort in maintaining a personalized trip planner, travelers can overcome 90% of the difficulties they may face during a trip. Here are some handy trip planning tips that will keep you prepared for the proverbial rainy day. <br> <br>
         Pick your destination <br>
         Decide the duration of your trip <br>
         Book flights, train, or bus tickets, and accommodation <br>
@@ -178,10 +183,13 @@
       <h3>Contact Us</h3>
       <p>
         Share your experiences with us and get travels discounts <br>
-        
+        Be part of our community by sharing your travel experiences. We need you to help others, your experiences matter.
+        Share with us your trip experience, and tell us about recommended sites for photos and recommended stays. 
       </p>
       <p>Images for the Page 3</p>
         <img src="images/Experience.jpg" alt="image for page3">
+        <img src="images/type.jpg" alt="image for page3">
+
 
       </ul>
       <hr>
@@ -193,21 +201,18 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/w-Home.png" alt="home page wireframe" style="width: 40%">
 
-      <h3>[Page 2]</h3>
+      <h3>Travel With Us</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/w-Travel.png" alt="page 2 wireframe" style="width: 40%">
 
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/w-Contact.png" alt="page 3 wireframe" style="width: 40%">
     </main>
   </body>
 
