--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -5,59 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link  rel="stylesheet" href="wwr/styles/style.css" />
+    <link  rel="stylesheet" href="styles/style.css" />
   </head> 
   <body>
     <div id="content">
-      <header>
-        <a id="logo_link" href="index.html">
-          <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="wwr/rivers.html">Rivers</a>
-            <a href="wwr/site-plan-rafting.html">Site Plan</a>
-            <a href="wwr/contactus.html">Contact Us</a>
-        </nav>
-      </header>
-      <main class="home-grid">
-        <form>
-            <ul>
-                <li>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name">
-                </li>
-                <li>
-                    <label for="mail">E-mail:</label>
-                    <input type="email" id="mail">
-                </li>
-                <li>
-                    <label for="msg">Message:</label>
-                    <textarea type="text" id="msg"></textarea>
-                </li>
-                <li>
-                    <button type="submit">Send</button>
-                </li>
-            </ul>
+        <header>
+            <a id="logo_link" href="https://giovanniyunior.github.io/">
+              <img class="logo" alt='Travel Agency Logo' src="https://byui-wdd.github.io/wdd130/rafting_images/logo.png"/>
+            </a>
+            <nav>
+                <a href="https://giovanniyunior.github.io/">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+          </header>
+      <main class="contactus-grid">
+        <div class="space-contactUs">
+            <form>
+                <ul>
+                    <li>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="user_name">
+                    </li>
+                    <li>
+                        <label for="mail">E-mail:</label>
+                        <input type="email" id="mail" name="user_email">
+                    </li>
+                    <li>
+                        <label for="msg">Message:</label>
+                        <textarea type="text" id="msg" name="user_message"></textarea>
+                    </li>
+                    <li>
+                        <button type="submit">Send</button>
+                    </li>
+                </ul>
+    
+            </form>
+        </div>
 
-        </form>
 
         <div id="feedback"></div>
 
       </main>
       <footer>
         <h3>Dry Oar &copy; 2022 - Giovanni Ulloque</h3>
-        <h3><a href="wwr/site-plan-rafting.html">Site Plan</a></h3>
-        <h3><a href="wwr/contactus.html">Contact Us</a></h3>
+        <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+        <h3><a href="contactus.html">Contact Us</a></h3>
         <div>
           <a href="https://facebook.com" target="_blank">
-            <img src="wwr/images/facebook.png" alt="facebook icon">
+            <img src="images/facebook.png" alt="facebook icon">
           </a>
           <a href="https://twitter.com" target="_blank">
-            <img src="wwr/images/twitter.png" alt="twitter icon">
+            <img src="images/twitter.png" alt="twitter icon">
           </a>
           <a href="https://instagram.com" target="_blank">
-            <img src="wwr/images/instagram.png" alt="instagram icon">
+            <img src="images/instagram.png" alt="instagram icon">
           </a>
         </div>
       </footer>
