--- a/travel/index.html
+++ b/travel/index.html
@@ -19,19 +19,20 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
       </header>
-      <div id="img">
-        <div id="img-box">
-          <img id="img" src="images/travelExperience.jpg" alt="Travel Experience">
-        </div>
-        <section id="img-msg">
-          <h1>Fly the world and share your experiences</h1>
-        </section>
-      </div>
+
       <main class="home-grid">
-       <div class="destino-grid">
-        <section id="destino-title">
-            <h2>Frequent Destinations</h2>
+        <section class="img-content">
+          <div id="img">
+            <div id="img-box">
+              <img id="img" src="images/travelExperience.jpg" alt="Travel Experience">
+            </div>
+            <section id="img-msg">
+              <h1>Fly the world and share your experiences</h1>
+            </section>
+          </div>
         </section>
+       <div class="destino-grid">
+
         <section id="destino1">
             <div id="img-destino">
                 <img id="img-card" src="images/buenosAires.jpeg" alt="Travel Experience">
@@ -46,7 +47,7 @@
             <div id="img-destino">
                 <img id="img-card" src="images/cartagena.jpeg" alt="Travel Experience">
             </div>
-            <div id="msg-destino">
+            <div id="msg-destino2">
                 <h3>Cartagena, Colombia</h3>
                 <h4>Miguel</h4>
                 <p>There is magic in this city, the people have a lot of energy and happiness, the old town is fantastic and romantic, I recommend visiting for your honeymoon, it's amazing, I also visit some islands close to the city. The water is transparent and you can snorkel.</p>
@@ -56,7 +57,7 @@
             <div id="img-destino">
                 <img id="img-card" src="images/iguazu.jpeg" alt="Travel Experience">
             </div>
-            <div id="msg-destino">
+            <div id="msg-destino3">
                 <h3>Iguazu, Argentina</h3>
                 <h4>Luisa</h4>
                 <p>One of the best places that I`ve visited in Iguazu was the waterfalls. I went with my family and my boyfriend. I enjoyed the landscape, animals, plants, etc. Everything was amazing. Of course, we walked a lot. The natural reserve is full of stairs and wonderful roads. We also saw some animals such as monkeys and meerkats. I hope that you can visit it, you will enjoy the trip.</p>
