--- a/CIT160/invest.html
+++ b/CIT160/invest.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>InvestmentCalculator</title>
         <script>
-            /** Input:  
-            * Processing: 
-            * Output:
+            /** Input:  Amount Invested, Annual Rate, Number of Years, Periods Per Years
+            * Processing: Calculate future value with formula. f = a (1 + r)n
+            * Output: future value
             **/
             function doFV (){
                 let amountInvested = parseFloat(document.getElementById('AmountInvested').value);
