--- a/CIT160/loan.html
+++ b/CIT160/loan.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LoanCalculator</title>
         <script>
-            /** Input:  
-            * Processing: 
-            * Output:
+            /** Input:  Amount Invested, Annual Rate, Number of Years, Periods Per Years, Number of Payments Paid to Date
+            * Processing: Calculate payment per period with formula. p =  ar/1 − (1 + r)−n and the balance b = a (1 + r)d −  p ( (1 + r)d − 1 )/r
+            * Output: payment per period and balance
             **/
 
             let payment;
