--- a/travel/travelwithus.html
+++ b/travel/travelwithus.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Agency</title>
     <link  rel="stylesheet" href="styles/style.css" />
+    <script src="js/travelwithus.js"></script>
+
   </head> 
   <body>
     <div id="content">
@@ -19,15 +21,52 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
       </header>
-      <div id="div-img">
-        <div id="img-box">
-          <img id="img" src="images/traveling.webp" alt="Travel Experience">
-        </div>
-        <section id="img-msg">
-          <h1>Enjoy Traveling</h1>
-        </section>
-      </div>
+
       <main class="home-grid">
+
+                
+        <!-- Slideshow container -->
+
+        <div class="slideshow-container" id="div-img">
+
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade" id="img-box">
+            <div class="numbertext">1 / 3</div>
+            <img src="images/traveling.webp" id="img" style="">
+            <div class="text">Caption Text</div>
+          </div>
+
+          <div class="mySlides fade" id="img-box">
+            <div class="numbertext">2 / 3</div>
+            <img src="images/traveling.webp" id="img" style="">
+            <div class="text">Caption Two</div>
+          </div>
+
+          <div class="mySlides fade" id="img-box">
+            <div class="numbertext">3 / 3</div>
+            <img src="images/traveling.webp" id="img" style="">
+            <div class="text">Caption Three</div>
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <section id="img-msg">
+            <h1>Enjoy Traveling</h1>
+          </section>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+
+
+        
+
         <section>
             <div id="text-travel1">
                 <h4>It is an adventure you’ve always dreamt of, but haven’t been able to plan and execute properly. Here are some useful pointers on how to plan a trip, that puts an end to the cluttered chaos by streamlining your vacations to perfect harmony and pure bliss.
