--- a/travel/travelwithus.html
+++ b/travel/travelwithus.html
@@ -69,18 +69,19 @@
             </div>
         </section>
         <section id="travel-card">
-            <img id="img-card" src="images/map.jpg" alt="Travel Experience">
-            <h5>With a little bit of preparation and effort in maintaining a personalized trip planner, travelers can overcome 90% of the difficulties they may face during a trip. Here are some handy trip planning tips that will keep you prepared for the proverbial rainy day.
-            </h5>
-        </section>
-        <section id="travel-card">
-            <img id="img-card" src="images/travelUs.png" alt="Travel Experience">
-            <h5>Pick your destination <br>
-                Decide the duration of your trip <br>
-                Book flights, train, or bus tickets, and accommodation <br>
-                Plan the day-wise activities and course of action <br>
-                Pack diligently and make all the necessary adjustments</h5>
-
+            <img id="img-card1" src="images/map.jpg" alt="Travel Experience">
+            <div id="text-card1">
+              <h5>With a little bit of preparation and effort in maintaining a personalized trip planner, travelers can overcome 90% of the difficulties they may face during a trip. Here are some handy trip planning tips that will keep you prepared for the proverbial rainy day.
+              </h5>
+            </div>
+            <img id="img-card2" src="images/travelUs.png" alt="Travel Experience">
+            <div id="text-card2">
+              <h5>Pick your destination <br>
+                  Decide the duration of your trip <br>
+                  Book flights, train, or bus tickets, and accommodation <br>
+                  Plan the day-wise activities and course of action <br>
+                  Pack diligently and make all the necessary adjustments</h5>
+            </div>
         </section>
      
       </main>
