--- a/travel/travelwithus.html
+++ b/travel/travelwithus.html
@@ -29,16 +29,16 @@
         <div class="slideshow-container" id="div-img">
 
           <!-- Full-width images with number and caption text -->
-          <div class="mySlides fade" id="img-box">
-            <img src="images/traveling.webp" id="img" style="">
+          <div class="mySlides fade img-box" >
+            <img src="images/traveling.webp" class="img" alt="SlideShowImage">
           </div>
 
-          <div class="mySlides fade" id="img-box">
-            <img src="images/mountain.jpg" id="img" style="">
+          <div class="mySlides fade img-box" >
+            <img src="images/mountain.jpg" class="img" alt="SlideShowImage">
           </div>
 
-          <div class="mySlides fade" id="img-box">
-            <img src="images/travelExperience.jpg" id="img" style="">
+          <div class="mySlides fade img-box" >
+            <img src="images/travelExperience.jpg" class="img" alt="SlideShowImage">
           </div>
 
           <!-- Next and previous buttons -->
