--- a/travel/index.html
+++ b/travel/index.html
@@ -21,21 +21,21 @@
       </header>
 
       <main class="home-grid">
-        <section class="img-content">
-          <div id="img">
+        <div class="img-content">
+          <div class="img">
             <div id="img-box">
-              <img id="img" src="images/travelExperience.jpg" alt="Travel Experience">
+              <img class="img" src="images/travelExperience.jpg" alt="Travel Experience">
             </div>
             <section id="img-msg">
-              <h1>Fly the world and share your experiences</h1>
+                <h2>Fly the world and share your experiences</h2>
             </section>
           </div>
-        </section>
+        </div>
        <div class="destino-grid">
 
         <section id="destino1">
-            <div id="img-destino">
-                <img id="img-card" src="images/buenosAires.jpeg" alt="Travel Experience">
+            <div class="img-destino">
+                <img class="img-card" src="images/buenosAires.jpeg" alt="Travel Experience">
             </div>
             <div id="msg-destino">
                 <h3>Buenos Aires, Argentina</h3>
@@ -44,8 +44,8 @@
             </div>
         </section>
         <section id="destino2">
-            <div id="img-destino">
-                <img id="img-card" src="images/cartagena.jpeg" alt="Travel Experience">
+            <div class="img-destino">
+                <img class="img-card" src="images/cartagena.jpeg" alt="Travel Experience">
             </div>
             <div id="msg-destino2">
                 <h3>Cartagena, Colombia</h3>
@@ -54,8 +54,8 @@
             </div>
         </section>
         <section id="destino3">
-            <div id="img-destino">
-                <img id="img-card" src="images/iguazu.jpeg" alt="Travel Experience">
+            <div class="img-destino">
+                <img class="img-card" src="images/iguazu.jpeg" alt="Travel Experience">
             </div>
             <div id="msg-destino3">
                 <h3>Iguazu, Argentina</h3>
